--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nan": "^2.14.0",
     "opusscript": "0.0.7",
     "system-sleep": "^1.3.6",
+    "the-traveler": "^1.0.1",
     "ytdl-core": "^0.29.7"
   }
 }
